apps/prod/home-assistant/resources/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant
  annotations:
    argocd.argoproj.io/sync-wave: "-4"
