apps/prod/home-assistant/resources/external-dns.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: home-assistant-extname
    annotations:
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:bIS88yZs8aErDwUZEKiX/fwMOAIhPUxcBVn4,iv:XUoiSUjvLndlROgZtiM2gGGSSBKjVBRn6w7q1YhA4kM=,tag:ItN6nP2N5b2+X7IsZqsoQw==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
spec:
    type: ExternalName
    externalName: ENC[AES256_GCM,data:SEpBqINIE0nSL3ni5Q1fMiKCYRoqImXWQB0G,iv:pklry5gNe8V2KsHLNr1XcuJHLK5XsOw68QH9hSPb2uI=,tag:TiSASb9EF4+ObnT+prGutA==,type:str]
    sessionAffinity: None
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTc09HMEFWeHpYVWtUUFFD
[...]
            OMGy0fE7sL08FwJRR8tmCXE27mmyC68la4ouWj/sSTriUwkhSpHDPw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-24T10:56:42Z"
    mac: ENC[AES256_GCM,data:z53lH3NQYqlvL8n60lhBPziE6t2uPpTTy7sgcoFrrmbKMpXcZ+wTOu1Jkp/mTYWl04Qxi3FLc9k2pPTv2eCcDlnEdTczcJIUkaNe+iB/AdYAhu+6eQzw0wJy2PX+TmKmqd4z2cLZsiqHlT1VQ/NG8mS7al3P71bn3HES1LRsbCE=,iv:CFkm5GOzTer5B+dwbtUUKpj6C0ijWw37WQaaLwd2hFA=,tag:Wn3hotYFAFgH7OxoKOeuMQ==,type:str]
    pgp:
        - created_at: "2024-06-22T20:23:04Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/8C0u19tMYmqcn5WqZ9IIubogZ+p2TCDjkp+wWPg4JEonr
[...]
            =hyHf
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
